tests/NormalTests/paczka1/small_fuzzy/23263679.err
Error in line 1: vJ2dFuFvGHP S245 74,9
Error in line 8: 0jqDqpfmWT A964 16,0
Error in line 12: tLqfzTiB S245 27,4
